modification du validator et le model adapter avec le nom utiliser dans la model et le edge

--- a/planify/resources/views/security/signup.edge
+++ b/planify/resources/views/security/signup.edge
@@ -12,8 +12,7 @@
 
         <form id="sign up" action="" method="">
          {{csrfField() }}
-          <input type="name">
-         <input type="full-name">
+         <input type="full_name">
          <input type="mail">
          <input type="passeword">
          <input type="submit">
