--- a/planify/resources/views/security/signup.edge
+++ b/planify/resources/views/security/signup.edge
@@ -8,14 +8,15 @@
 </head>
 <body>
     <div>
-        <h1>inscription</h1>
+        <h1>sign up</h1>
 
         <form id="sign up" action="" method="">
          {{csrfField() }}
-         <input type="full_name">
-         <input type="mail">
-         <input type="passeword">
-         <input type="submit">
+
+         <input type="text" name="fullName" placeholder="fullmane">
+         <input type="email" name="email"  placeholder="email">
+         <input type="password" name="password"  placeholder="password">
+         <button type="submit">submit</button>
       </form>
 
     </div>
