--- a/planify/resources/views/security/login.edge
+++ b/planify/resources/views/security/login.edge
@@ -5,16 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body cla>
-    <div>
-        <h1>login</h1>
+<body class="bg-pink-200 min-h-screen flex items-center justify-center">
+    <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-md">
+      
+      <div class="mb-6 text-center">
+        <h1 class="text-3xl font-bold text-pink-600">Login</h1>
+      </div>
+  
+      <form class="flex flex-col gap-4" action="">
+        {{csrfField() }}
+        <input 
+          type="email" 
+          name="email" 
+          placeholder="Email" 
+          class="p-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-400"/>
+        <input 
+          type="password" 
+          name="password" 
+          placeholder="Mot de passe" 
+          class="p-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-400"
+        />
+        <button 
+          type="submit" 
+          class="bg-pink-500 hover:bg-pink-600 text-white font-semibold py-2 rounded-lg transition duration-200"
+        >
+          Se connecter
+        </button>
+      </form>
+  
     </div>
-
-    <form action="">
-        <input type="email" name="email" placeholder="email" >
-        <input type="password" name="password" placeholder="password">
-        <button> submit</button>
-    </form>
-</body>
+  </body>
+  
 </html>
