--- a/planify/resources/views/security/login.edge
+++ b/planify/resources/views/security/login.edge
@@ -14,34 +14,30 @@
         <h1 class="text-3xl font-bold text-pink-600">Login</h1>
       </div>
   
-      <form class="flex flex-col gap-4" action="/login" method="POST">
-        {{ csrfField() }}
+      <form class="flex flex-col gap-4" action="/signup" method="POST">
+         {{ csrfField() }}
   
-        <input 
-          type="email" 
-          name="email" 
-          placeholder="Email" 
-          class="p-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-400 w-full"
-        />
+          <input 
+           type="email" 
+           name="email" 
+           placeholder="Email" 
+          class="p-3 rounded-lg border border-gray-300 w-full"/>
   
-        <input 
-          type="password" 
-          name="password" 
-          placeholder="Mot de passe" 
-          class="p-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-400 w-full"
-        />
+         <input 
+           type="password" 
+           name="password" 
+           placeholder="Mot de passe" 
+           class="p-3 rounded-lg border border-gray-300 w-full"/>
   
-        <button 
-          type="submit" 
-          class="bg-pink-500 hover:bg-pink-600 text-white font-semibold py-2 rounded-lg transition duration-200 w-full"
-        >
-          Login
-        </button>
+          <button 
+            type="submit" 
+            class="bg-pink-500 hover:bg-pink-600 text-white font-semibold py-2 rounded-lg transition duration-200 w-full"> Login
+          </button>
       </form>
   
       <p class="text-center text-sm text-gray-600 mt-4">
         Don't have an account? 
-        <a href="/register" class="text-pink-600 hover:underline font-medium">Sign up</a>
+        <a href="/signup" class="text-pink-600 hover:underline font-medium">Sign up</a>
       </p>
   
     </div>
